Attack Check Optimization
Reduced amount of checks for less clutter, added temporary animation if check is positive

--- a/TwoBigSwords/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/TwoBigSwords/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -391,7 +391,7 @@ BP_AI_v2_C=BP_EnemyAI_C.Physics.ConstraintsGroup,BP_AI_v2_C.Physics.ConstraintsG
 NavMeshBoundsVolume=BP_EnemyAI_C.Physics.ConstraintsGroup,BP_AI_v2_C.Physics.ConstraintsGroup,SkeletalMeshComponent.Physics.ConstraintsGroup,CapsuleComponent.Physics.ConstraintsGroup
 BrushComponent=
 AB_AI_v2_C=BP_EnemyAI_C.Physics.ConstraintsGroup,SkeletalMeshComponent.Physics.ConstraintsGroup
-BP_ThirdPersonCharacter_C=BP_EnemyAI_C.Physics.ConstraintsGroup,BP_AI_v2_C.Physics.ConstraintsGroup,SkeletalMeshComponent.Physics.ConstraintsGroup,CapsuleComponent.Physics.ConstraintsGroup
+BP_ThirdPersonCharacter_C=BP_EnemyAI_C.Physics.ConstraintsGroup,BP_AI_v2_C.Physics.ConstraintsGroup,BP_AI_v2_C.TransformCommon.Transform,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.TransformCommon.Transform,CapsuleComponent.Physics.ConstraintsGroup
 K2Node_VariableGet=BP_EnemyAI_C.Physics.ConstraintsGroup,BP_AI_v2_C.Physics.ConstraintsGroup,SkeletalMeshComponent.Physics.ConstraintsGroup,CapsuleComponent.Physics.ConstraintsGroup
 K2Node_CustomEvent=BP_EnemyAI_C.Physics.ConstraintsGroup,BP_AI_v2_C.Physics.ConstraintsGroup,BP_AI_v2_C.TransformCommon.Transform,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.TransformCommon.Transform,CapsuleComponent.Physics.ConstraintsGroup
 
@@ -2387,9 +2387,9 @@ MRUItem3=/Game/ThirdPerson/AI/v2/BP_AI_v2
 MRUItem4=/Game/ThirdPerson/AI/v2/AB_AI_v2
 MRUItem5=/Game/ThirdPerson/AI/v2/AI_Controller_v2
 MRUItem6=/Game/ThirdPerson/AI/Tasks/BTTask_ChasePlayer
-MRUItem7=/Game/ThirdPerson/Blueprints/BP_EnemyAI
-MRUItem8=/Game/ThirdPerson/AI/v2/BlendSpace_AI_v2
-MRUItem9=/Game/ThirdPerson/AI/Tasks/BTTask_Roam
+MRUItem7=/Game/ThirdPerson/AI/v2/BlendSpace_AI_v2
+MRUItem8=/Game/ThirdPerson/AI/Tasks/BTTask_Roam
+MRUItem9=/Game/ThirdPerson/Blueprints/BP_EnemyAI
 MRUItem10=/Game/ThirdPerson/AI/v2/BTTask_ChasePlayer
 MRUItem11=/Game/ThirdPerson/AI/v2/BBD_AI_v2
 MRUItem12=/Game/ThirdPerson/AI/v2/NewBlendSpace
